[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://images/menus/level_select.png" type="Texture" id=2]
[ext_resource path="res://images/gui/level_button_normal.png" type="Texture" id=3]
[ext_resource path="res://images/gui/level_button_hover.png" type="Texture" id=4]
[ext_resource path="res://images/gui/level_button_complete.png" type="Texture" id=5]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Level0Button" type="TextureButton" parent="."]
margin_left = 166.0
margin_top = 185.0
margin_right = 266.0
margin_bottom = 285.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="Label" type="Label" parent="Level0Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Level 1"
align = 1
valign = 1

[node name="Level1Button" type="TextureButton" parent="."]
margin_left = 344.0
margin_top = 190.0
margin_right = 444.0
margin_bottom = 290.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="Label" type="Label" parent="Level1Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Level 2"
align = 1
valign = 1

[node name="Level2Button" type="TextureButton" parent="."]
margin_left = 526.0
margin_top = 195.0
margin_right = 626.0
margin_bottom = 295.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="Label" type="Label" parent="Level2Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Level 3"
align = 1
valign = 1

[node name="SkipDayButton" type="Button" parent="."]
margin_left = 58.0
margin_top = 379.0
margin_right = 161.0
margin_bottom = 412.0
text = "Skip Day"

[node name="Label" type="Label" parent="."]
margin_left = 90.0
margin_top = 332.0
margin_right = 130.0
margin_bottom = 346.0
text = "DAY X"

[connection signal="pressed" from="Level0Button" to="." method="_on_Level0Button_pressed"]
[connection signal="pressed" from="Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="SkipDayButton" to="." method="_on_SkipDayButton_pressed"]
